fixed too big images issue

--- a/src/Harentius/BlogBundle/Resources/public/css/main.less
+++ b/src/Harentius/BlogBundle/Resources/public/css/main.less
@@ -42,6 +42,12 @@ figcaption {
   padding: 10px;
 }
 
+.page-content {
+  img {
+    max-width: 826px;
+  }
+}
+
 .main-menu-wrapper {
   margin: 15px 0;
 
